# B4FastAPI

./: .editorconfig  .gitignore  AGENT.md  AGENTS.md  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_auth_schema.py  0002_auth_identities_multi_provider.py
backend/app/: __init__.py  deps.py  main.py
backend/app/core/: database.py  error.py  mail.py  mail_templates.py  redis.py  settings.py
backend/app/core/error/: __init__.py  auth_exception.py  error.py
backend/app/models/: oauth.py  user.py
backend/app/routers/v1/: auth.py
backend/app/services/: auth.py
backend/app/utils/: __init__.py  cookies.py  security.py  token.py
docker/: .env.example  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json
scripts/: bootstrap.ps1  bootstrap.sh
worklog/: 0001-agent-commit-and-worklog-convention.md  0002-repo-baseline-and-ignore-policy.md  0003-docker-and-bootstrap-setup.md  0004-backend-core-runtime-and-settings.md  0005-backend-auth-domain-and-routes.md  0006-frontend-auth-ui-and-i18n-source.md  0007-frontend-tooling-and-build-pipeline.md  0008-brand-svg-icon-asset.md  0009-current-session-progress-log.md  0010-navbar-profile-dropdown-and-theme-switch.md  0011-readme-template-scope-cleanup.md  0012-backend-smtp-integration.md  0013-email-gated-password-reset-flow.md  0014-alembic-migration-baseline.md  0015-auth-identities-multi-provider-schema.md  0016-refresh-token-session-storage.md  0017-auth-service-session-issuer-refactor.md  (+19 more)
(+48 files in other folders)
